syntax = "proto3";

package role;

option go_package = "jh_user_service/api/role/v1";

import "google/protobuf/timestamp.proto";

service Role {
    rpc GetRoleList(GetRoleListReq) returns (GetRoleListRes) {}
}

message GetRoleListReq {
    int32 site_id = 1;  // 站点ID
}

message RoleInfo {
    int32 id = 1;                                        // 角色ID
    int32 site_id = 2;                                   // 站点ID
    string name = 3;                                     // 角色名称
    int32 status = 4;                                    // 状态：0=禁用，1=启用
    google.protobuf.Timestamp created_at = 5;            // 创建时间
    google.protobuf.Timestamp updated_at = 6;            // 更新时间
    string permissions = 7;                              // 权限配置
}

message GetRoleListRes {
    repeated RoleInfo roles = 1;                         // 角色列表
}